nginx_svc.yaml
# Deploy nginx image
apiVersion: v1
kind: Pod
metadata:
  name: nginx 
  labels:
    app.kubernetes.io/name: nginx 
spec:
  containers:
  - name: nginx 
    image: nginx
    ports:
      - containerPort: 80
        name: http-web-svc

# Create svc for nginx to expose port 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app.kubernetes.io/name: nginx
  type: NodePort
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 80
    targetPort: http-web-svc
