whoami_svc_ingress.yaml
apiVersion: v1
kind: Pod
metadata:
  name: whoami 
  labels:
    app.kubernetes.io/name: whoami 
spec:
  containers:
  - name: whoami 
    image: containous/whoami 
    ports:
      - containerPort: 80
        name: http-web-svc

---
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
spec:
  selector:
    app.kubernetes.io/name: whoami
  type: NodePort
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 80
    targetPort: http-web-svc

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80  
      - path: /whoami
        pathType: Prefix
        backend:
          service:
            name: whoami-service
            port:
              number: 80
